i moved around my pictures i added my scoll tabs and then i fixed my header and then i added 5 diffrent css cases and then i fixed my picture and put it in the middle and all i need to do is get my pitures to align and need to fix my tex and have my footter not over lap

--- a/smart.css
+++ b/smart.css
@@ -68,12 +68,12 @@
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #CCE7F8;
-    padding: -5px;
-    text-align: left;
+    position: relative;
+  margin-top: -180px;
+  /* negative value of footer height */
+  height: 180px;
+  clear: both;
+  background-color: #C2E3EB;
 }
 .footerdef{
     text-align: center;
@@ -83,7 +83,65 @@
     margin-bottom: 100px;
 }
 .image7{
-    align-content: right;
-    width: 90%;
-    height: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: 70%;
 }
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
+  /* Float four columns side by side */
+.column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+    margin: 4px, 4px;
+            padding: 4px;
+            background-color: #53C7F5;
+            width: 600px;
+            height: 220px;
+            overflow-x: hidden;
+            overflow-y: auto;
+            text-align: justify;
+  }
+  
+  /* Remove extra left and right margins, due to padding in columns */
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+  }
+  
+  /* Responsive columns - one column layout (vertical) on small screens */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
